# smiley_detection

./: CMakeLists.txt  readme.md
src/detect_smileys_in_image_cuda/: CMakeLists.txt  main.py  main_detect_smileys_in_image.cu  script_detect_smiley.py  script_detect_smiley_debug.py
src/files_helpers_cuda_no_filesystem/: CMakeLists.txt  files_helpers_cuda_no_filesystem.cpp  files_helpers_cuda_no_filesystem.h
